--- a/river-crossing-puzzles/index.html
+++ b/river-crossing-puzzles/index.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta http-equiv="refresh" content="0;URL='https://river-crossing-fantasy.netlify.app/'" />
+</head>
+</html>
